--- a/game.html
+++ b/game.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Space Salesman</title>
     <link rel="stylesheet" href="css/game.css"/>
+<!--    <script src="script/data.js"></script>-->
+<!--    <script src="script/model.js"></script>-->
+    <script src="script/bundle.js"></script>
 </head>
 <body>
     <header id="main_bar">
@@ -27,101 +30,101 @@
                         15, 32
                     </div>
                 </div></a>
-                <div class="planet_item">
+                <a href="planet.html"><div class="planet_item">
                     <h1>Argoland</h1>
                     <div>
                         59, 44
                     </div>
-                </div>
-                <div class="planet_item">
+                </div></a>
+                <a href="planet.html"><div class="planet_item">
                     <h1>Arrakis</h1>
                     <div>
                         81, 34
                     </div>
-                </div>
-                <div class="planet_item">
+                </div></a>
+                <a href="planet.html"><div class="planet_item">
                     <h1>Corellia</h1>
                     <div>
                         43, 69
                     </div>
-                </div>
-                <div class="planet_item">
+                </div></a>
+                <a href="planet.html"><div class="planet_item">
                     <h1>Encja</h1>
                     <div>
                         91, 32
                     </div>
-                </div>
-                <div class="planet_item">
+                </div></a>
+                <a href="planet.html"><div class="planet_item">
                     <h1>Gaia</h1>
                     <div>
                         75, 76
                     </div>
-                </div>
-                <div class="planet_item">
+                </div></a>
+                <a href="planet.html"><div class="planet_item">
                     <h1>Ksi</h1>
                     <div>
                         91, 71
                     </div>
-                </div>
-                <div class="planet_item">
+                </div></a>
+                <a href="planet.html"><div class="planet_item">
                     <h1>Leonida</h1>
                     <div>
                         32, 5
                     </div>
-                </div>
-                <div class="planet_item">
+                </div></a>
+                <a href="planet.html"><div class="planet_item">
                     <h1>NowWhat</h1>
                     <div>
                         35, 41
                     </div>
-                </div>
+                </div></a>
             </div>
         </div>
         <div class="items_container" id="spaceships">
             <h1>Spaceships</h1>
             <div class="flex_container">
-                <div class="spaceship_item">
+                <a href="spaceship.html"><div class="spaceship_item">
                     <h1>Axiom</h1>
                     <div>
                         Tatooine
                     </div>
-                </div>
-                <div class="spaceship_item">
+                </div></a>
+                <a href="spaceship.html"><div class="spaceship_item">
                     <h1>Enterprise</h1>
                     <div>
                         Corellia
                     </div>
-                </div>
-                <div class="spaceship_item">
+                </div></a>
+                <a href="spaceship.html"><div class="spaceship_item">
                     <h1>Goliath</h1>
                     <div>
                         Sur'Kesh
                     </div>
-                </div>
-                <div class="spaceship_item">
+                </div></a>
+                <a href="spaceship.html"><div class="spaceship_item">
                     <h1>Hermes</h1>
                     <div>
                         NowWhat
                     </div>
-                </div>
-                <div class="spaceship_item">
+                </div></a>
+                <a href="spaceship.html"><div class="spaceship_item">
                     <h1>Millenium Falcon</h1>
                     <div>
                         Tatooine
                     </div>
-                </div>
-                <div class="spaceship_item">
+                </div></a>
+                <a href="spaceship.html"><div class="spaceship_item">
                     <h1>Invincible</h1>
                     <div>
                         Argoland
                     </div>
-                </div>
-                <div class="spaceship_item">
+                </div></a>
+                <a href="spaceship.html"><div class="spaceship_item">
                     <h1>Космонавт Алексе́й Лео́нов</h1>
                     <div>
                         Arrakis
                     </div>
-                </div>
+                </div></a>
             </div>
         </div>
     </main>
