--- a/spaceship.html
+++ b/spaceship.html
@@ -16,7 +16,7 @@
             <h2>Cargo</h2>
             <h3>Size: 33</h3>
             <table>
-                <tr><th>Item</th><th>Quantity</th><th>Sell price</th></tr>
+                <tr><th>Item</th><th>Quantity</th><th>Sell price</th><th></th></tr>
                 <tr><td>Dwimeryt</td><td>14</td><td>-</td><td>SELL</td></tr>
                 <tr><td>Nuka-Cola</td><td>5</td><td>17</td><td>SELL</td></tr>
                 <tr><td>Unobtainium</td><td>7</td><td>31</td><td>SELL</td></tr>
@@ -25,7 +25,7 @@
         <div id="buy_menu">
             <h2>Shop</h2>
             <table>
-            <tr><th>Item</th><th>Quantity</th><th>Buy price</th></tr>
+            <tr><th>Item</th><th>Quantity</th><th>Buy price</th><th></th></tr>
             <tr><td>Lyrium</td><td>4</td><td>9</td><td>BUY</td></tr>
             <tr><td>Nuka-Cola</td><td>5</td><td>19</td><td>BUY</td></tr>
             <tr><td>Unobtainium</td><td>7</td><td>34</td><td>BUY</td></tr>
