--- a/game.html
+++ b/game.html
@@ -4,128 +4,29 @@
     <meta charset="UTF-8">
     <title>Space Salesman</title>
     <link rel="stylesheet" href="css/game.css"/>
-<!--    <script src="script/data.js"></script>-->
-<!--    <script src="script/model.js"></script>-->
     <script src="script/bundle.js"></script>
 </head>
 <body>
+    <div id="popup_layer"></div>
     <header id="main_bar">
         <img src="img/title.png" alt="Space Salesman" id="logo">
         <div id="time_info">
-            Time left: 16
+            Time left: <span></span>
         </div>
         <div id="player_info">
             <span id="nickname">Captain-a</span>
             <br/>
-            <span id="result">Credits: 1984</span>
+            <span id="result">Credits: <span></span></span>
         </div>
     </header>
     <main>
         <div class="items_container" id="planets">
             <h1>Planets</h1>
-            <div class="flex_container">
-                <a href="planet.html"><div class="planet_item">
-                    <h1>Alderaan</h1>
-                    <div>
-                        15, 32
-                    </div>
-                </div></a>
-                <a href="planet.html"><div class="planet_item">
-                    <h1>Argoland</h1>
-                    <div>
-                        59, 44
-                    </div>
-                </div></a>
-                <a href="planet.html"><div class="planet_item">
-                    <h1>Arrakis</h1>
-                    <div>
-                        81, 34
-                    </div>
-                </div></a>
-                <a href="planet.html"><div class="planet_item">
-                    <h1>Corellia</h1>
-                    <div>
-                        43, 69
-                    </div>
-                </div></a>
-                <a href="planet.html"><div class="planet_item">
-                    <h1>Encja</h1>
-                    <div>
-                        91, 32
-                    </div>
-                </div></a>
-                <a href="planet.html"><div class="planet_item">
-                    <h1>Gaia</h1>
-                    <div>
-                        75, 76
-                    </div>
-                </div></a>
-                <a href="planet.html"><div class="planet_item">
-                    <h1>Ksi</h1>
-                    <div>
-                        91, 71
-                    </div>
-                </div></a>
-                <a href="planet.html"><div class="planet_item">
-                    <h1>Leonida</h1>
-                    <div>
-                        32, 5
-                    </div>
-                </div></a>
-                <a href="planet.html"><div class="planet_item">
-                    <h1>NowWhat</h1>
-                    <div>
-                        35, 41
-                    </div>
-                </div></a>
-            </div>
+            <div class="flex_container"></div>
         </div>
         <div class="items_container" id="spaceships">
             <h1>Spaceships</h1>
-            <div class="flex_container">
-                <a href="spaceship.html"><div class="spaceship_item">
-                    <h1>Axiom</h1>
-                    <div>
-                        Tatooine
-                    </div>
-                </div></a>
-                <a href="spaceship.html"><div class="spaceship_item">
-                    <h1>Enterprise</h1>
-                    <div>
-                        Corellia
-                    </div>
-                </div></a>
-                <a href="spaceship.html"><div class="spaceship_item">
-                    <h1>Goliath</h1>
-                    <div>
-                        Sur'Kesh
-                    </div>
-                </div></a>
-                <a href="spaceship.html"><div class="spaceship_item">
-                    <h1>Hermes</h1>
-                    <div>
-                        NowWhat
-                    </div>
-                </div></a>
-                <a href="spaceship.html"><div class="spaceship_item">
-                    <h1>Millenium Falcon</h1>
-                    <div>
-                        Tatooine
-                    </div>
-                </div></a>
-                <a href="spaceship.html"><div class="spaceship_item">
-                    <h1>Invincible</h1>
-                    <div>
-                        Argoland
-                    </div>
-                </div></a>
-                <a href="spaceship.html"><div class="spaceship_item">
-                    <h1>Космонавт Алексе́й Лео́нов</h1>
-                    <div>
-                        Arrakis
-                    </div>
-                </div></a>
-            </div>
+            <div class="flex_container"></div>
         </div>
     </main>
 </body>
