--- a/game/game.html
+++ b/game/game.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Space Salesman</title>
-    <link rel="stylesheet" href="css/game.css"/>
-    <script src="script/bundle.js"></script>
+    <link rel="stylesheet" href="/game/css/game.css"/>
+    <script src="/game/script/bundle.js"></script>
 </head>
 <body>
     <div id="popup_layer"></div>
     <header id="main_bar">
-        <img src="img/title.png" alt="Space Salesman" id="logo">
+        <img src="/game/img/title.png" alt="Space Salesman" id="logo">
         <div id="time_info">
             Time left: <span></span>
         </div>
@@ -19,6 +19,11 @@
             <span id="result">Credits: <span></span></span>
         </div>
     </header>
+    <div id="map_dock" style="margin-top: 200px">
+        <svg width="600" height="600" id="map_svg">
+<!--            <circle cx="0" cy="0" r="40" stroke="green" stroke-width="4" fill="yellow"></circle>-->
+        </svg>
+    </div>
     <main>
         <div class="items_container" id="planets">
             <h1>Planets</h1>
